# mo-phong-tu-tien

./: .gitignore  Makefile  README.md  main.py  pattern_design.txt  pyproject.toml
database/: create_db.py  create_table_data_game_in_db.py  game_tu_tien.db  import_csv_to_db.py
database/raw/: hệ thống chỉ số nhân vật.csv  hệ thống cảnh giới.csv  hệ thống linh căn.csv  hệ thống nhiệm vụ.csv
database/templates/: he_Thong_canh_gioi.md  he_thong_chi_so_nhan_vat.md  he_thong_linh_can.md  he_thong_nhiem_vu.md
src/common/: string_utils.py
webui/: app.js  home.html  routes.py  style.css
